--- a/frontend/src/scss/index.scss
+++ b/frontend/src/scss/index.scss
@@ -16,6 +16,10 @@ body {
   font-style: normal;
 }
 
+input[type='date']::-webkit-calendar-picker-indicator {
+  filter: invert(100%);
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
